--- a/src/index.html
+++ b/src/index.html
@@ -11,22 +11,26 @@
 </head>
 <body>
     <section>
+        <div class="js-block-image"></div>
         <div class="js-movie-container"></div>
     </section>
 
     <div class="js-form-global-container">
         <form class="js-form-container form-container">
             <h2>Add new movie</h2>
-            <input type="text" name="nickname" placeholder="Enter your nickname">
+            <input type="text" name="nickname" placeholder="Enter your nickname" class="review-main-details">
             <br>
             <br>
-            <input type="text" name="movie title" placeholder="Movie to be discussed" >
+            <input type="text" name="movie title" placeholder="Movie to be discussed" class="review-main-details">
             <br>
             <br>
-            <textarea name="review" rows="4" cols="50" placeholder="Enter your thoughts"></textarea>
+            <textarea name="review" rows="4" cols="50" placeholder="Enter your thoughts" class="review-main-details"></textarea>
             <br>
             <br>
-            <input type="text" name="movie score" placeholder="Evaluation (1-10)">
+            <input type="text" name="movie score" placeholder="Evaluation (1-10)" class="review-main-details">
+            <br>
+            <br>
+            <button class="image-button">Add image</button>
             <br>
             <br>
             <button class="submit-button">Submit</button>
