--- a/src/index.html
+++ b/src/index.html
@@ -18,16 +18,16 @@
     <div class="js-form-global-container">
         <form class="js-form-container form-container">
             <h2>Add new movie</h2>
-            <input type="text" name="nickname" placeholder="Enter your nickname" class="review-main-details">
+            <input type="text" name="nickname" placeholder="Enter your nickname" class="review-main-details" required>
             <br>
             <br>
-            <input type="text" name="movie title" placeholder="Movie to be discussed" class="review-main-details">
+            <input type="text" name="movie title" placeholder="Movie to be discussed" class="review-main-details" required>
             <br>
             <br>
-            <textarea name="review" rows="4" cols="50" placeholder="Enter your thoughts" class="review-main-details"></textarea>
+            <textarea name="review" rows="4" cols="50" placeholder="Enter your thoughts" class="review-main-details" required></textarea>
             <br>
             <br>
-            <input type="text" name="movie score" placeholder="Evaluation (1-10)" class="review-main-details">
+            <input type="text" name="movie score" placeholder="Evaluation (1-10)" class="review-main-details" required>
             <br>
             <br>
             <button class="image-button">Add image</button>
