--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,10 @@
 </head>
 <body>
     <section>
-        <div class="js-block-image"></div>
-        <div class="js-movie-container"></div>
+        <div class="global-container">
+            <div class="js-image-container"></div>
+            <div class="js-movie-container"></div>
+        </div>
     </section>
 
     <div class="js-form-global-container">
