Image URL input added

--- a/src/index.html
+++ b/src/index.html
@@ -11,28 +11,32 @@
 </head>
 <body>
     <section>
-        <div class="global-container">
+            <div class="global-test"></div>
             <div class="js-image-container"></div>
             <div class="js-movie-container"></div>
-        </div>
     </section>
 
     <div class="js-form-global-container">
         <form class="js-form-container form-container">
             <h2>Add new movie</h2>
+            <label for="nickname">Your Nickname:</label>
             <input type="text" name="nickname" placeholder="Enter your nickname" class="review-main-details" required>
             <br>
             <br>
+            <label for="movie title">Enter Movie:</label>
             <input type="text" name="movie title" placeholder="Movie to be discussed" class="review-main-details" required>
             <br>
             <br>
+            <label for="review">Your review:</label>
             <textarea name="review" rows="4" cols="50" placeholder="Enter your thoughts" class="review-main-details" required></textarea>
             <br>
             <br>
+            <label for="movie score">Movie score:</label>
             <input type="text" name="movie score" placeholder="Evaluation (1-10)" class="review-main-details" required>
             <br>
             <br>
-            <button class="image-button">Add image</button>
+            <label for="image">Image URL:</label>
+            <input type="text" id="image" name="image" class="review-main-details" required>
             <br>
             <br>
             <button class="submit-button">Submit</button>
